--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -154,7 +154,7 @@ Configure cluster.conf
 
 In order to create a new cluster, you need to configure `/usr/local/pf/conf/cluster.conf` on the first server of your cluster.
 
-You will need to configure it with your server hostname. To get it use : *hostname* in a command line.
+You will need to configure it with your server hostname. To get it use : `hostname` in a command line.
 
 In the case of this example it will be 'pf1.example.com'. 
 
@@ -259,19 +259,21 @@ Once this configuration is done, reload the configuration and perform a checkup.
  
 The reload and the checkup will complain about the unavailability of the database, which you can safely ignore for now. Most important is that you don't see any cluster configuration related errors during the checkup.
  
-Then, restart PacketFence to apply all your changes
-
- # /usr/local/pf/bin/pfcmd service pf restart
-
 Then make sure the PacketFence clustering services will be started at boot by running the following command on all of your servers
 
  # systemctl set-default packetfence-cluster
 
-You should now restart packetfence-mariadb on the first server so that it now starts in clustered mode. Note that it will fail to start properly until at least one of the other node is alive (pingable). Once an alive quorum is reached it will be able to create a new cluster.
+Still on the first server, start MariaDB forcing it to create a new cluster. This command will not return until you break it, so leave it running in the background and continue on.
 
- # service packetfence-mariadb restart
+ # service packetfence-mariadb stop
+ # /usr/local/pf/bin/pfcmd generatemariadbconfig
+ # /usr/local/pf/sbin/pf-mariadb --force-new-cluster
 
 NOTE: If the cluster is unable to get created properly, it may be because the other nodes have their MariaDB service running. Make sure you stop it on all nodes except the first one for now (`service packetfence-mariadb stop` and `service mariadb stop`).
+
+Then, restart PacketFence to apply all your changes
+
+ # /usr/local/pf/bin/pfcmd service pf restart
 
 If no error is found in the previous configuration, the previous restart of packetfence should have started keepalived and radiusd-loadbalancer along with the other services.
 
@@ -322,11 +324,9 @@ Make sure that this server is binding to it's own management address. If it's no
 MariaDB sync
 ^^^^^^^^^^^^
 
-First, ensure packetfence-mariadb is started on the first server. Again this can take up to 5 minutes to start since its an initial cluster creation.
+First, ensure your MariaDB instance running with `--force-new-cluster` is still running on the first node, if its not, start it again.
 
-  # service packetfence-mariadb start
-
-And ensure packetfence-mariadb is stopped on the two servers that will be joined
+Then, ensure packetfence-mariadb is stopped on the two servers that will be joined
 
   # service packetfence-mariadb stop
 
@@ -353,6 +353,12 @@ Important variables:
 
 In order for the cluster to be considered healthy, all nodes must be listed under `wsrep_incoming_addresses` and `wsrep_local_state_comment` must be `Synced`. Otherwise look in the MariaDB log (`/var/lib/mysql/PF_HOSTNAME.err`)
 
+Starting the first server normally
+++++++++++++++++++++++++++++++++++
+
+Once all servers are synced, go on the first server that should still be running with the `--force-new-cluster` option, break the command and then start packetfence-mariadb normally:
+
+  # service packetfence-mariadb start
 
 Wrapping up
 ^^^^^^^^^^^
@@ -400,15 +406,9 @@ Once the server that is in read-only mode joins a quorum, it will go back in rea
 Graceful shutdown behavior
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-When you are gracefully shutting down servers for a planned maintenance, you should always aim to leave a quorum alive so that once the server joins its peers again, it will always re-join the cluster gracefully. You can also leave only one of the nodes alive but keep in mind it will fall in read-only mode but once another node joins the cluster, it will be able to join gracefully.
+When you are gracefully shutting down servers for a planned maintenance, you should always aim to leave a quorum alive so that once the server joins its peers again, it will always re-join the cluster gracefully. You can also leave only one of the nodes alive but keep in mind it will fall in read-only mode until all the nodes that were part of the last healthy quorum rejoin the cluster.
 
-Should all your nodes be shutdown gracefully (not force killed), when they come back online, they will not be able to create a quorum automatically using the built-in Galera cluster stack. In this case, the management node will self-elect as a master and have the other nodes join the cluster. This means that if you did gracefully shutdown the management node 30 minutes before shutting down the other nodes, when they come back online you will lose the 30 minutes of data that aren't on the management node. 
-
-Note that the self-election process of the management node can take up to 5 minutes and requires that more than 50% of the nodes be alive (pingable) during that time.
-
-Knowing this, you should never restart all of your nodes at the same time and should always aim to leave at least one available and online so that it knows about the previous state of the cluster. When possible, leave a quorum alive.
-
-You can prevent the management node from self-electing as master by putting it in maintenance mode before you shut it down (See 'Putting a node in maintenance'). When you do so, be aware that if the other 2 nodes shutdown, there will not be any self-election and the cluster will be waiting for a manual intervention from an administrator to start. You can force any node to become a master and create a new cluster using `/usr/local/pf/bin/mariadb --force-new-cluster`. Then wait until another server connects to this new cluster, break the command and start packetfence-mariadb like you normally would.
+Should all your nodes shutdown gracefully, the last node to be shutdown will be the one that will be able to self-elect as master when you bring the machines back online. Bringing this node back online first is a best practice but not mandatory. In order to know which server would be able to self-elect as master, look for the node that has `safe_to_bootstrap: 1` when executing the following command `cat /var/lib/mysql/grastate.dat | grep 'safe_to_bootstrap:'`.
 
 Ungraceful shutdown behavior
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -417,9 +417,7 @@ NOTE: You can know a node was hard-shutdown if `/var/lib/mysql/gvwstate.dat` exi
 
 If at least one node is still alive, other nodes will be able to connect to it and re-integrate the cluster.
 
-Should all nodes experience an ungraceful shutdown, the management process will start a quorum server on port 7890 in order to collect information from the other nodes about their state when they were last shutdown. Once *every* node has reported its state when it died, the management node will select the latest state (based on the node provided timestamp of `/var/lib/mysql/gvwstate.dat`) and will instruct all members of this state to startup and all members that weren't part of it to leave their MySQL service off. Once all the servers that were in that state are started up, you will gain service on your database and the quorum server will shutdown. The nodes that were left off will detect that there is another node offering database service and will connect to it.
-
-If one or more of the nodes was gracefully shutdown, this process will not work and you will need to elect one of the nodes manually as the master with `/usr/local/pf/sbin/pf-mariadb --force-new-cluster` while making sure you delete `/var/lib/mysql/gvwstate.dat` on all the servers. Given the different amount of cases that can occur, selecting the node to elect as master is not documented in this guide. You can refer to the section 'Electing a new master' when you know which node you want to elect.
+When all nodes are ungracefuly shutdown, they will be able to recover when the last 2 running nodes will be able to talk to each other. If all nodes were shutdown at the same time, all of them must rejoin the cluster for it to form again. Until the cluster reaches a healthy state, you will not have any database service.
 
 Recovering when a node is missing
 +++++++++++++++++++++++++++++++++
@@ -432,9 +430,7 @@ First, stop packetfence-mariadb on all servers:
 
 Then remove `/var/lib/mysql/gvwstate.dat` on all the servers that are still alive.
 
-Then, if the management node is part of the alive nodes, start all of your servers and the management node will make sure to establish a new cluster. Note that this process can take up to 5 minutes to occur and will only occur if more than 50% of the nodes are alive (pingable).
-
-If the management node is not part of the alive nodes, see the section 'Electing a new master' to start up a new cluster.
+Next, see the section 'Electing a new master' to start up a new cluster.
 
 Electing a new master
 ~~~~~~~~~~~~~~~~~~~~~
@@ -445,7 +441,6 @@ At any time, you can start up a new cluster without the management node which is
 Wait for another server to connect to this new cluster, break the command and start packetfence-mariadb like you normally would.
 
 Note that if your management node is alive, but not communicating with the new master node, then it will create a new cluster on its side automatically unless it is in maintenance mode. When electing a new cluster, you should ensure your management has (or will have when its alive) valid communication with the newly promoted cluster. Otherwise, you will end up in a split brain situation. See 'Recovering from a split brain' to fix this.
-
 
 Recovering from a split brain
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -775,8 +770,6 @@ If your migration to node C goes wrong, you can fail back to nodes A and B by st
 
   # service packetfence-mariadb start
   # systemctl isolate packetfence-cluster
-
-Note that it may take up to 5 minutes for service to recover as node A has to self-elect itself as the database master.
 
 Once you are feeling confident to try your failover to node C again, you can do the exact opposite of the commands above to try your upgrade again.
 
